force-app/main/default/objects/Custom_Form__c/Custom_Form__c.object-meta.xml
<CustomObject>
    <label>Custom Form</label>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Custom Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>