force-app/main/default/objects/Custom_Form__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Custom Forms</relationshipLabel>
    <relationshipName>Custom_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>