force-app/main/default/objects/Custom_Form__c/fields/Object_Setting__c.field-meta.xml
<CustomField>
    <fullName>Object_Setting__c</fullName>
    <label>Object Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>