force-app/main/default/objects/Custom_Form__c/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>