force-app/main/default/objects/Custom_Form__c/fields/Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Survey_Link__c</fullName>
    <formula>$Label.GuestSiteLink + &apos;/apex/FormVf?formid=&apos;+ UUID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Link</label>
    <type>Text</type>
</CustomField>